standards/gnds-2.0-alpha/alpha/c/src/v2.0/tsl/Unorthodox.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Unorthodox is the basic handle type in this file. Example:
//    // Create a default Unorthodox object:
//    Unorthodox handle = UnorthodoxDefault();
// Functions involving Unorthodox are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_ALPHA_V2_0_TSL_UNORTHODOX
#define C_INTERFACE_ALPHA_V2_0_TSL_UNORTHODOX

#include "GNDStk.h"
#include "v2.0/common/Mass.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct UnorthodoxClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Unorthodox
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct UnorthodoxClass *Unorthodox;

// --- Const-aware handles.
typedef const struct UnorthodoxClass *const ConstHandle2ConstUnorthodox;
typedef       struct UnorthodoxClass *const ConstHandle2Unorthodox;
typedef const struct UnorthodoxClass *      Handle2ConstUnorthodox;
typedef       struct UnorthodoxClass *      Handle2Unorthodox;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstUnorthodox
UnorthodoxDefaultConst();

// +++ Create, default
extern_c Handle2Unorthodox
UnorthodoxDefault();

// --- Create, general, const
extern_c Handle2ConstUnorthodox
UnorthodoxCreateConst(
   const char *const id,
   ConstHandle2ConstMass mass
);

// +++ Create, general
extern_c Handle2Unorthodox
UnorthodoxCreate(
   const char *const id,
   ConstHandle2ConstMass mass
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
UnorthodoxAssign(ConstHandle2Unorthodox This, ConstHandle2ConstUnorthodox from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
UnorthodoxDelete(ConstHandle2ConstUnorthodox This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
UnorthodoxRead(ConstHandle2Unorthodox This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
UnorthodoxWrite(ConstHandle2ConstUnorthodox This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
UnorthodoxPrint(ConstHandle2ConstUnorthodox This);

// +++ Print to standard output, as XML
extern_c int
UnorthodoxPrintXML(ConstHandle2ConstUnorthodox This);

// +++ Print to standard output, as JSON
extern_c int
UnorthodoxPrintJSON(ConstHandle2ConstUnorthodox This);


// -----------------------------------------------------------------------------
// Metadatum: id
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
UnorthodoxIdHas(ConstHandle2ConstUnorthodox This);

// +++ Get
// +++ Returns by value
extern_c const char *
UnorthodoxIdGet(ConstHandle2ConstUnorthodox This);

// +++ Set
extern_c void
UnorthodoxIdSet(ConstHandle2Unorthodox This, const char *const id);


// -----------------------------------------------------------------------------
// Child: mass
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
UnorthodoxMassHas(ConstHandle2ConstUnorthodox This);

// --- Get, const
extern_c Handle2ConstMass
UnorthodoxMassGetConst(ConstHandle2ConstUnorthodox This);

// +++ Get, non-const
extern_c Handle2Mass
UnorthodoxMassGet(ConstHandle2Unorthodox This);

// +++ Set
extern_c void
UnorthodoxMassSet(ConstHandle2Unorthodox This, ConstHandle2ConstMass mass);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/tsl/Unorthodox/src/custom.h"

#undef extern_c
#endif