versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Unorthodox.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalUnorthodox
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function UnorthodoxDefaultConst() &
      bind(C, name='UnorthodoxDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function UnorthodoxDefaultConst

!! Create, default
function UnorthodoxDefault() &
      bind(C, name='UnorthodoxDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function UnorthodoxDefault

!! Create, general, const
function UnorthodoxCreateConst( &
   id, &
   mass, &
   idSize &
) &
      bind(C, name='UnorthodoxCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: idSize
   character(c_char), intent(in) :: id(idSize)
   type(c_ptr), value :: mass
   type(c_ptr) :: handle
end function UnorthodoxCreateConst

!! Create, general
function UnorthodoxCreate( &
   id, &
   mass, &
   idSize &
) &
      bind(C, name='UnorthodoxCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: idSize
   character(c_char), intent(in) :: id(idSize)
   type(c_ptr), value :: mass
   type(c_ptr) :: handle
end function UnorthodoxCreate

!! Assign
subroutine UnorthodoxAssign(handleLHS, handleRHS) &
      bind(C, name='UnorthodoxAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine UnorthodoxAssign

!! Delete
subroutine UnorthodoxDelete(handle) &
      bind(C, name='UnorthodoxDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine UnorthodoxDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function UnorthodoxRead(handle, filename, filenameSize) &
      bind(C, name='UnorthodoxRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function UnorthodoxRead

!! Write to file
function UnorthodoxWrite(handle, filename, filenameSize) &
      bind(C, name='UnorthodoxWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function UnorthodoxWrite

!! Print to standard output, in our prettyprinting format
function UnorthodoxPrint(handle) &
      bind(C, name='UnorthodoxPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function UnorthodoxPrint

!! Print to standard output, as XML
function UnorthodoxPrintXML(handle) &
      bind(C, name='UnorthodoxPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function UnorthodoxPrintXML

!! Print to standard output, as JSON
function UnorthodoxPrintJSON(handle) &
      bind(C, name='UnorthodoxPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function UnorthodoxPrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: id
!! -----------------------------------------------------------------------------

!! Has
function UnorthodoxIdHas(handle) &
      bind(C, name='UnorthodoxIdHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function UnorthodoxIdHas

!! Get
function UnorthodoxIdGet(handle) &
      bind(C, name='UnorthodoxIdGet') &
      result(id)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: id
end function UnorthodoxIdGet

!! Set
subroutine UnorthodoxIdSet(handle, id, idSize) &
      bind(C, name='UnorthodoxIdSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: idSize
   character(c_char), intent(in) :: id(idSize)
end subroutine UnorthodoxIdSet


!! -----------------------------------------------------------------------------
!! Child: mass
!! -----------------------------------------------------------------------------

!! Has
function UnorthodoxMassHas(handle) &
      bind(C, name='UnorthodoxMassHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function UnorthodoxMassHas

!! Get, const
function UnorthodoxMassGetConst(handle) &
      bind(C, name='UnorthodoxMassGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function UnorthodoxMassGetConst

!! Get
function UnorthodoxMassGet(handle) &
      bind(C, name='UnorthodoxMassGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function UnorthodoxMassGet

!! Set
subroutine UnorthodoxMassSet(handle, fieldHandle) &
      bind(C, name='UnorthodoxMassSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine UnorthodoxMassSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalUnorthodox
